# origami

./: .gitignore  .prettierrc  README.md  app.gotasdfasdfsd  bun.lockb  copy.html  go.mod  go.sum  index.html  main.go  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1714376292628-44c181e89e0d5.mjs  vite.config.ts.timestamp-1715435611292-0a963dc6b044e.mjs  wails.json
.husky/: pre-commit
apps/explorer/: package.json  tsconfig.json
apps/explorer/src/: App.tsx  index.css  main.tsx  styles.css
apps/explorer/src-tauri/: Cargo.toml  tauri.conf.json
apps/explorer/src-tauri/capabilities/: default.json
apps/explorer/src-tauri/src/: commands.rs  enums.rs  event_emitter.rs  fs_manager.rs  main.rs  structs.rs  utils.rs
apps/explorer/src-tauri/src/api/: commands.rs  mod.rs
apps/explorer/src-tauri/src/event_emitter/: commands.rs  mod.rs
apps/explorer/src-tauri/src/size/: commands.rs  mod.rs
apps/file-explorer/: package.json  tsconfig.json  vite.config.ts
apps/file-explorer/src/: App.tsx  index.css  main.tsx
apps/file-explorer/src-tauri/: Cargo.toml  tauri.conf.json
config/: css.go  main.go
copy/src/: main.rs
embeds/: copy.go
fs/: dir.go  disks.go  entry.go  folders.go  fs.go  main.go
html/: calculator.html  monitor-selector.html  window-selector.html  window-switcher.html
src/: App.tsx  index.tsx  main.tsx  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_window.rs  app_windows.rs  backend.rs  commands.rs  config.rs  consts.rs  disks.rs  enums.rs  events.rs  file_indexing.rs  file_system.rs  hotkey_listener.rs  listener.rs  main.rs  modules.rs  payloads.rs  settings.rs  structs.rs  utils.rs  watcher.rs  window_manager.rs
src-tauri/src/environment/: mod.rs  platform_impl.rs
src-tauri/src/file_system/: api.rs  commands.rs  dir.rs  file.rs  misc.rs  mod.rs  platform_impl.rs  structs.rs
src-tauri/src/funcs/: processes.rs
src-tauri/src/libs/: consts.rs  enums.rs  mod.rs  utils.rs
src-tauri/src/old/: disks.rs  main.rs  payloads.rs  settings.rs
src-tauri/src/old/file_system/: api.rs  mod.rs  platform_impl.rs
src-tauri/src/windows/: enum_functions.rs  mod.rs
src/components/: for.tsx  unkeyed-for.tsx
src/components/bottombar/: bottombar.css  bottombar.tsx  index.ts  item-count.tsx  operations.tsx
src/components/dialogs/: create-dialog.tsx  (+3 more)
src/contexts/: callstack.ts  current-dir.ts  environment.ts  global-states.ts  navigation.ts  settings.ts
src/hooks/: index.ts  use-accessor.ts  use-backend-event.ts  use-backend-operation.ts  use-callstack.ts  use-command-response.ts  use-command.ts  use-commands.ts  use-current-dir.ts  use-dispatchers.ts  use-environment.ts  use-event.tsx  use-frontend-event.ts  use-global-states.ts  use-selection.ts  use-settings.ts  use-tauri-event.ts
src/lib/: arithmetic-parser-old.ts  arithmetic-parser.ts  callstack.ts  command.ts  consts.ts  enums.ts  event-emitter.ts  expression-parser.ts  file-icon-map.tsx  hotkeys.ts  index.ts  mapped-invoke.ts  operation-listeners.ts  operation.ts  operations.ts  search-worker.ts  types.ts  utils.ts  utils.tsx
src/pages/: copy.tsx  monitor-selector.tsx
src/pages-old/: window-selector.tsx
src/redux/: callstack-slice.ts  current-dir-slice.ts  environment-slice.tsx  global-states-slice.ts  settings-slice.ts  store.ts
src/typings/: accessor.ts  basic-dir.ts  command.ts  dir-entry.ts  disk.ts  enums.ts  events.ts  payload.ts  props.ts  settings.ts
src/zustand/: callstack-store.tsx  config-store.ts  curent-dir-store.ts  current-dir-slice.ts  environment-store.tsx  global-state-store.ts  global-states-store.ts  settings-store.ts  settings-store.tsx
utils/: fs.go  main.go  utils.go
www/: index.html  package.json  package.json.md5  tsconfig.json  vite.config.ts.timestamp-1729635334008.mjs
www/src/: App.tsx  main.tsx
(+443 files in other folders)
