[package]
name = "origami"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
log = "0.4.21"
walkdir = "2.5.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
open = "5.1.2"
chrono = "0.4.38"

