[package]
name = "explorer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "fs-rename-file", "window-unmaximize", "window-minimize", "shell-open", "path-all", "window-start-dragging", "window-maximize", "window-unminimize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.7"
window-shadows = "0.2.2"
opener = "0.7.0"
fs_extra = "1.3.0"
winapi = { version = "0.3.9", features = ["ioapiset"] }
walkdir = "2.5.0"
rayon = "1.10.0"
jwalk = "0.8.1"
chrono = "0.4.37"
drag = "0.4.0"
tauri-plugin-drag = "0.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
