[package]
name = "explorer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.2"
strum_macros = "0.26.2"
sysinfo = "0.30.10"
open = "5.1.2"
winapi = { version = "0.3.9", features = ["securitybaseapi"] }
walkdir = "2.5.0"
rayon = "1.10.0"
chrono = "0.4.38"